# eval_mate_py

./: .env.example  .gitignore  CHAT_FEATURE_README.md  CHAT_IMPLEMENTATION.md  README.md  UPDATE_SERVER.md  ecosystem.config.js  evalmate_cli.py  pyproject.toml
.github/workflows/: azure-static-web-apps-green-pebble-066353e03.yml  main_evalmate-api.yml
app/: __init__.py  config.py  main.py  requirements.txt
app/api/: __init__.py  chat_routes.py  evaluate_routes.py  fusion_routes.py  schemas.py  server.py
app/core/: __init__.py  types.py  visual_extraction.py
app/core/chat/: __init__.py  models.py  service.py
app/core/fusion/: __init__.py  builder.py  schema.py  utils.py
app/core/io/: __init__.py  caption_heuristics.py  captioning.py  docx_utils.py  ingest.py  ocr.py  pdf_utils.py  rubric_extractor.py  rubric_parser.py  table_extraction.py  text_utils.py
app/core/llm/: __init__.py  chunking.py  evaluator.py  json_guard.py  model_api.py  model_config.py  multimodal_context.py  prompts.py  rate_limit.py
app/core/models/: __init__.py  ids.py  schemas.py  validators.py
app/core/store/: __init__.py  backend_selector.py  json_store.py  repo.py  sqlite_store.py
app/data/: db.sqlite3
app/data/rubrics/: rubric_1761947702166_YBd1lQ.json  (+4 more)
app/tests/: __init__.py
app/ui/: __init__.py  cli.py  cli_evaluate.py  cli_fusion.py
azure_api/: requirements.txt
azure_api/fastapi_server/: __init__.py  function.json
data/fusion/: FUSION-submission_1761951412359_m0ozTw.json  FUSION-submission_1762011171233_7Q288Q.json  FUSION-submission_1762011171253_qX1Ckg.json
frontend/: .env.local.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
next_js/: jsconfig.json  next.config.js  package-lock.json  package.json
next_js/prisma/: schema.prisma
(+52 files in other folders)
